# mars_AIAgents

./: .gitignore  GMAIL_SETUP.md  INIT_FILES_SUMMARY.md  INSTALLATION.md  README.md  __init__.py  api_server.py  get_data.py  main.py  package-lock.json  package.json  pyproject.toml  requirements-minimal.txt  requirements.txt  start_dev.py  webpack.config.js
config/: __init__.py
orchestrator/: langgraph_orchestrator.py
prompt/: __init__.py  prompt_library.py
public/: index.html
src/: DocumentViewer.css  DocumentViewer.jsx  ProcessingPage.css  ProcessingPage.jsx  index.js
static/: ProcessingPage.css
templates/: ProcessingPage.jsx  index.js
utils/: __init__.py
